# DetectionApp

./: .gitignore  CMakeLists.txt  README.md  build.bat  copy_assets.bat  detectionapp.sln  resources.qrc
CameraInteraction/: CameraInteraction.cpp  CameraInteraction.vcxproj
ObjectDetection/: ObjectDetection.cpp  ObjectDetection.h
WebCam/: CMakeLists.txt  Source.cpp  WebCam_v2.0.sln  WebCam_v2.0.vcxproj
WebCam/CameraInteraction/: CMakeLists.txt  CameraInteraction.vcxproj
WebCam/ObjectDetection/: ObjectDetection.vcxproj
WebCam/WebCam/: CMakeLists.txt
assets/: stylesheet.qss
data/: detectors.json  lbpcascades.rar  models.json
data/default_detectors/: haarcascades.rar
data/detector_paths/: Face with Features.yaml  Frontal Face.yaml  MobileNet v2.yaml  Traffic Detector.yaml  Trained Model.yaml
python/: data.yaml
python/models/Classification Model/: class_names.txt
python/src/: detection.py  main.py
src/: CMakeLists.txt  WebCam.sln  detection.py  main.py  train.py  train_classification_model.py  train_detection_model.ipynb
src/Application/: CMakeLists.txt  ModelLoader.cpp  ModelLoader.h  main.cpp  mainwindow.ui
src/CameraInteraction/: CMakeLists.txt  CameraInteraction.cpp  CameraInteraction.h
src/CameraInteraction_v2/: CMakeLists.txt  CameraInteraction.cpp  CameraInteraction.h
src/DetectionAppGUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/GUI/: CMakeLists.txt  FrameOptions.cpp  FrameOptions.h  components.cpp  components.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuOptions.cpp  menuOptions.h  modelLoader_GUI.cpp  modelLoader_GUI.h
src/GUI/custom_widgets/: CollapsibleWidget.hpp  LabeledSlider.hpp  SceneImageViewer.hpp
src/GUI/sidemenu/: menu.cpp  menu.h
src/GUI/window/: MainWindow.cpp  MainWindow.h  ModelLoader_window.cpp  ModelLoader_window.h
src/ImageProcessingUtils/: CMakeLists.txt  FrameOptions.cpp  FrameOptions.h  ImageProcessingUtils.cpp  ImageProcessingUtils.h  OptionsHistory.cpp  OptionsHistory.h  RevertableOptions.h  Timer.cpp  Timer.h
src/ObjectDetection/: CMakeLists.txt  CanToggleObjects.h  CascadeClassifierDetector.cpp  CascadeClassifierDetector.h  CascadeClassifierGroup.cpp  CascadeClassifierGroup.h  Detection.cpp  Detection.h  DetectionMat.cpp  DetectionMat.h  Detector.h  DetectorFactory.cpp  DetectorFactory.h  FaceDetector.cpp  FaceDetector.h  ModelErrors.h  ModelLoader.cpp  ModelLoader.h  NeuralNetworkDetector.cpp  NeuralNetworkDetector.h  ObjectDetection.cpp  ObjectDetection.h  ObjectDetector.cpp  ObjectDetector.h  OnnxDetector.cpp  OnnxDetector.h  RectangleShape.cpp  RectangleShape.h  Serializable.h  Shape.h  ThresholdAdjuster.h  interfaces.h
src/ObjectDetection_v2/: CMakeLists.txt  ObjectDetection.cpp  ObjectDetection.h
src/WebCam/: CMakeLists.txt  Source.cpp  WebCam.vcxproj
tests/: CMakeLists.txt  DetectionAppTests.cpp  DetectorTests.cpp  OptionsHistoryTests.cpp  ProcessingAlgorithmsTests.cpp  Qt_and_CV_image_conversion_Tests.cpp  TestUtils.hpp
videoFeed/: VideoFeed.cpp  VideoFeed.sln  VideoFeed.vcxproj  main.cpp  utils.cpp
