# CMakeLists for the solution

# Add the subdirectories for the different parts of the application
add_subdirectory(Application)
add_subdirectory(CameraInteraction)
add_subdirectory(ObjectDetection)

add_subdirectory(CameraInteraction_v2)
add_subdirectory(ObjectDetection_v2)
add_subdirectory(WebCam)
#add_subdirectory(UserInterface)